--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,3 +2,14 @@ set -g mouse on
 
 bind-key -n C-e select-pane -t :.+
 bind-key -n C-p next-window
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @colors-solarized 'dark'
+
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
+run '~/.tmux/plugins/tpm/tpm'
