--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 emacs/.emacs.d/ido.last
 emacs/.emacs.d/elpa
 emacs/.emacs.d/ac-comphist.dat
+nvim/.config/nvim/.netrwhist
+nvim/.config/nvim/autoload/
+nvim/.config/nvim/bundles/
