--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-emacs/.emacs.d/ido.last
-emacs/.emacs.d/elpa
-emacs/.emacs.d/ac-comphist.dat
+emacs/.emacs.d
 nvim/.config/nvim/.netrwhist
 nvim/.config/nvim/autoload/
 nvim/.config/nvim/bundles/
